bgd/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bluegreen
  name: bluegreen
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: bluegreen
